--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,27 @@ footer {
 }
 
 
-.canvas {
-    height: 700px;
-    width: 700px;
-    border: solid black 2px;
+#canvas {
+    height: 680px;
+    width: 680px;
+    border: solid black 10px;
+    display: grid;
+    grid-template-rows: repeat(var(--grid-rows), 1fr);
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
 }
 
+.gridRow,
+.gridCol {
+    border: 1px solid black;
+}
+
+:root {
+  --grid-cols: 1;
+  --grid-rows: 1;
+  --gridsize: 0;
+}
+
+.grid-item {
+  border: 1px solid #ddd;
+  text-align: center;
+}
