--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@ body {
     padding: 0;
 }
 
-
 :root {
     --grid-cols: 1;
     --grid-rows: 1;
+    --pen-colour: black;
 }
 
 header {
@@ -33,6 +33,7 @@ footer {
     position: fixed;
     bottom: 0;
 }
+
 .content {
     display: flex;
     justify-content: center;
@@ -43,6 +44,7 @@ footer {
 .colour span {
     text-align: left;
 }
+
 .left-sidebar {
     height: 680px;
     width: 200px;
@@ -54,6 +56,10 @@ footer {
     gap: 24px;
 } 
 
+h3 {
+    font-size: 24px;
+}
+
 .right-sidebar {
     height: 680px;
     width: 200px;
@@ -63,6 +69,12 @@ footer {
     justify-content: center;
     align-items: center;
     gap: 24px;
+}
+
+#setting {
+    height: 50px;
+    width: 50px;
+    border-radius: 10%;
 }
 
 #canvas {
@@ -82,11 +94,12 @@ footer {
 .bar span {
     text-align: center;
 }
-.gridRow,
-.gridCol {
-    border: 1px solid black;
-}
 
+.colour {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
 
 .grid-item {
   border: 1px solid #ddd;
@@ -95,4 +108,8 @@ footer {
 footer {
     text-align: center;
     width: 100%;
+}
+
+.grid-item:hover {
+    background-color: var(--pen-colour);
 }
