Implement draw feature (#9)

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,10 @@ footer {
     text-align: left;
 }
 
+.grid-item {
+    user-select: none;
+}
+
 .left-sidebar {
     height: 680px;
     width: 200px;
